# experiments

./: .gitignore
data/agent_clusterizer/: QUICK_REFERENCE.md  README.md  agentic_clusterizer.py  cnae.txt  configuration_manager.py  demo.py  examples.py  main.py  requirements.txt  run_full_cnae.py  tree_merge_processor.py  use_cases.py
data/appache/: apache_products.json  appache.ipynb
data/babel/: babel.ipynb  language_applications.json
data/babelistic/: .coverage  debug_empty.py  debug_geofence.py  debug_zero.py  main.py
data/babilistic/: .coverage  debug_empty.py  debug_geofence.py  debug_zero.py
data/bakery/: main.ipynb
data/ball-kicking/: simulation.py
data/basket/: basket_analysis.ipynb
data/boto/: boto-services.ipynb  boto-support.json
data/boty/: .env.example  README.md  parameter_optimization_results.csv  pyproject.toml  requirements.txt  test.db  test_integration.db  test_phase1.db
data/clouds/: cloud.txt  cloudCollection.ipynb  cloud_categories.json  cloud_services.json
data/cluster_balancing/: clusters.xlsx  clusters_20250404.xlsx  main.ipynb
data/continuousIntervals/: setInterval.ipynb
data/cosmopol/: Untitled.ipynb  brazil_cities.csv  capital_positions.txt  cities_coords.csv  cities_old.csv  near_cities.ipynb
data/data-modelling-lectures/: .sqlfluff  README.md  docker-compose.yaml  setup_database.sql  validate_all.sh
data/data_definitions/: main.py
data/data_queries/: .gitignore  .pre-commit-config.yaml  ENHANCED_PLATFORM_INSTRUCTIONS.md  UV_MIGRATION.md  claude_instructions.md  main.py  pyproject.toml
data/document_summarization/: incremental_agent.py  main.py
data/euler_sql/: euler.sql
data/flygon/: airport_research.ipynb  airports.csv  airports.txt  airports_count.csv
data/geodesics/: geodesics.ipynb
data/gil-free-round-robin/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  gil_roundrobin_bench.py
data/hil-orchestration/: .env.example  composio_inspector.py  copilot_instructions.md  original_plan.md  plan_summary.md  report.md
data/hil-orchestration/hil-agent-system/: .coverage  .env  .env.example  .env.production.example  .pre-commit-config.yaml  DEV_PYRIGHT_UPDATE.md  Dockerfile  FINAL_UV_SETUP_COMPLETE.md  MAKEFILE_UV_UPDATE.md  Makefile  QUICK_REFERENCE.md  README.md  alembic.ini  dev.ps1  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  verify_makefile.sh
data/hil-orchestration/hil-agent-system/.github/: copilot-instructions.md
data/hil-orchestration/hil-agent-system/alembic/: env.py
data/hil-orchestration/hil-agent-system/app/: __init__.py  main.py
data/hil-orchestration/hil-agent-system/app/agents/: __init__.py
data/hil-orchestration/hil-agent-system/app/agents/types/: __init__.py  simple_agent.py
data/hil-orchestration/hil-agent-system/app/api/: __init__.py
data/hil-orchestration/hil-agent-system/app/api/v1/: __init__.py  router.py
data/hil-orchestration/hil-agent-system/app/api/v1/endpoints/: __init__.py  agents.py  tools.py  workflows.py
data/hil-orchestration/hil-agent-system/app/core/: celery.py  config.py  database.py  exceptions.py  llm_providers.py  llm_router.py  logging.py  metrics.py
data/hil-orchestration/hil-agent-system/app/models/: __init__.py  agent.py  conversation_turn.py  execution.py  llm_config.py  memory.py  tool.py  workflow.py
data/hil-orchestration/hil-agent-system/app/services/: __init__.py  anti_echo.py  llm_router.py  memory_lock.py  turn_manager.py  workflow_integration.py  workflow_loader.py  workflow_registry.py
data/hil-orchestration/hil-agent-system/config/: workflow_schema.json
data/hil-orchestration/hil-agent-system/config/workflows/: customer_support_advanced.v2.yaml  simple_intent_classification.v1.yaml
data/hil-orchestration/hil-agent-system/docker/postgres/: init.sql
data/hil-orchestration/hil-agent-system/docker/prometheus/: prometheus.yml
data/hil-orchestration/hil-agent-system/docs/: DEV_QUICK_REFERENCE.md  PHASE1_CHECKLIST.md  PHASE1_PROGRESS.md  README.md  ROADMAP.md  anti_echo_implementation.md  api_intelligence_guideline.md  chunking_and_graph_strategy.md  copilot_instructions.md  hil_metaworkflow.md  implementation_guideline.md  implementation_phases.md  implementation_roadmap.md  keys_security_guideline.md  production_readiness_assessment.md
data/hil-orchestration/hil-agent-system/scripts/: init_db.py
data/hil-orchestration/hil-agent-system/tests/: conftest.py  test_anti_echo.py  test_api.py  test_core.py  test_core_llm_router.py  test_database.py  test_llm_providers.py  test_llm_providers_fixed.py  test_llm_router.py  test_llm_router_fixed.py  test_main.py  test_memory_lock.py  test_metrics.py  test_models.py  test_simple_agent.py  test_turn_manager.py  test_utils.py  test_workflow_integration.py  test_workflow_loader.py  test_workflow_registry.py  test_workflow_registry_simple.py  test_workflows_api.py  test_yaml_workflow_system.py
data/hugging-face-scrapper/: hf_models_.parquet  main.ipynb  main.py  statistics.py  to_parquet.py
data/investments/: main.py
data/lambdapi/: .coveragerc  Dockerfile  Makefile  deploy_notebook.ipynb  pyproject.toml  requirements.txt
data/llm_chat/: main.ipynb
data/monster-gathering/: main.ipynb
data/pagination/: README.md  config.py  core.py  database.py  main.py  requirements.txt  strategies.py  utils.py
data/pipedown/: luigi_example.py  pip_requirements.txt  word_count_hadoop.py  word_count_spark.py
data/pizzayolo/: pizza-ingredients.ipynb  pizzas.json
data/probability_estimation_framework/: .coverage
data/product-recommendation/: main.ipynb
data/rapidash/: aesthetics.py  bootstrap.py  ddk.py  first.py  minimal.py  plotly_dash.py  requirements.txt  sidebar.py  visuals.py
data/rebalance-partitions/: main.ipynb
data/saga_pattern/: .coverage  COVERAGE_FINAL_SUMMARY.md  COVERAGE_GAPS_ANALYSIS.md  COVERAGE_PROGRESS.md  Dockerfile  README.md  TEST_SUMMARY.md  __init__.py  pyproject.toml  saga_pattern.py  saga_pattern_examples.py  test_saga_pattern.py
data/spark_lectures/: .gitignore  (+5 more)
(+466 files in other folders)
